# aoc2020

./: .gitignore  LICENSE  aoc2020.py  days.py  mypy.ini  pyproject.toml  test.py
aoc2020/: aoc2020.py  dayselector.py
aoc2020/days/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
test/: test_days.py  testinputs.py
