[tool.poetry]
name = "aoc2020-petii"
version = "0.1.0"
description = ""
authors = ["Peter Vida <petike997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typed-argument-parser = "^1.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
